adds fonts and font style for hero section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
       sizes="32x32"
       href="./assets/favicon-32x32.png"
     />
-    <title>Frontend Mentor | Meet landing page</title>
+    <title>Meet landing page</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap"
+      rel="stylesheet"
+    />
 
     <link
       rel="stylesheet"
@@ -35,14 +42,18 @@
         />
 
         <div class="hero-thumb">
-          <h1>Group Chat for Everyone</h1>
+          <h1 class="hero-title">Group Chat<br />for Everyone</h1>
           <p>
             Meet makes it easy to connect with others face-to-face virtually and
             collaborate across any device.
           </p>
 
-          <button class="btn" type="button">Download <span>v1.3</span></button>
-          <button class="btn" type="button">What is it?</button>
+          <div class="btn-thumb">
+            <button class="btn" type="button">
+              Download <span class="btn-vetsion">v1.3</span>
+            </button>
+            <button class="btn btn-second" type="button">What is it?</button>
+          </div>
         </div>
 
         <img
