adds smarter-section

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
             alt="Different people avatars"
           />
 
-          <div class="hero-thumb">
-            <h1 class="hero-title">Group Chat<br />for Everyone</h1>
+          <div class="text-thumb hero-text-thumb">
+            <h1 class="title hero-title">Group Chat<br />for Everyone</h1>
             <p>
               Meet makes it easy to connect with others face-to-face virtually
               and collaborate across any device.
@@ -67,7 +67,7 @@
         <div class="section-number" aria-label="first section">01</div>
       </section>
 
-      <section>
+      <section class="smarter-section">
         <div class="container">
           <ul class="photos-list">
             <li class="photos-item">
@@ -102,8 +102,28 @@
               />
             </li>
           </ul>
+
+          <div class="text-thumb">
+            <p class="accent-text">Built for modern use</p>
+            <h2 class="title second-title">
+              Smarter meetings, all<br />in one place
+            </h2>
+            <p>
+              Send messages, share files, show your screen, and record your
+              meetings — all in one workspace. Control who can join with
+              <span style="white-space: nowrap">invite-only</span> team access,
+              data encryption, and data export.
+            </p>
+          </div>
         </div>
+
+        <div class="section-number section-number-second" aria-label="first section">02</div>
       </section>
+      
     </main>
+
+    <footer>
+
+    </footer>
   </body>
 </html>
