adds murkup to footer

--- a/index.html
+++ b/index.html
@@ -117,13 +117,26 @@
           </div>
         </div>
 
-        <div class="section-number section-number-second" aria-label="first section">02</div>
+        <div
+          class="section-number section-number-second"
+          aria-label="first section"
+        >
+          02
+        </div>
       </section>
-      
     </main>
 
-    <footer>
-
+    <footer class="footer">
+      <div class="container footer-container">
+        <h2 class="title footer-title">Experience more together</h2>
+        <p>
+          Stay connected with reliable HD meetings and unlimited one-on-one and
+          group video sessions.
+        </p>
+        <button class="btn btn-footer" type="button">
+          Download <span class="btn-footer-vetsion">v1.3</span>
+        </button>
+      </div>
     </footer>
   </body>
 </html>
