--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <h2 class="title second-title">
               Smarter meetings, all<br />in one place
             </h2>
-            <p>
+            <p class="footer-text">
               Send messages, share files, show your screen, and record your
               meetings — all in one workspace. Control who can join with
               <span style="white-space: nowrap">invite-only</span> team access,
@@ -129,7 +129,7 @@
     <footer class="footer">
       <div class="container footer-container">
         <h2 class="title footer-title">Experience more together</h2>
-        <p>
+        <p class="footer-text">
           Stay connected with reliable HD meetings and unlimited one-on-one and
           group video sessions.
         </p>
