adds media for herro

--- a/index.html
+++ b/index.html
@@ -35,13 +35,7 @@
 
     <main>
       <section class="hero">
-        <div class="overflow-wrapper">
-          <img
-            class="hero-left-photo"
-            src="./assets/desktop/image-hero-left.png"
-            alt="Different people avatars"
-          />
-
+        <div class="overflow-hidden">
           <div class="text-thumb hero-text-thumb">
             <h1 class="title hero-title">Group Chat<br />for Everyone</h1>
             <p>
@@ -56,12 +50,6 @@
               <button class="btn btn-second" type="button">What is it?</button>
             </div>
           </div>
-
-          <img
-            class="hero-right-photo"
-            src="./assets/desktop/image-hero-right.png"
-            alt="Different people avatars"
-          />
         </div>
 
         <div class="section-number" aria-label="first section">01</div>
