--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           <div class="text-thumb">
             <p class="accent-text">Built for modern use</p>
             <h2 class="title second-title">
-              Smarter meetings, all<br />in one place
+              Smarter meetings, all in one place
             </h2>
             <p>
               Send messages, share files, show your screen, and record your
