adds sass files

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     />
 
     <link rel="stylesheet" href="./styles/styles.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
     <header class="header">
@@ -45,7 +46,7 @@
 
             <div class="btn-thumb">
               <button class="btn" type="button">
-                Download <span class="btn-vetsion">v1.3</span>
+                Download <span class="btn-version">v1.3</span>
               </button>
               <button class="btn btn-second" type="button">What is it?</button>
             </div>
